feat: add index to mongo-init script

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,11 +5,11 @@ services:
     restart: always
     container_name: mongo
     environment:
+      MONGO_INITDB_DATABASE: yt
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root123
-      MONGO_INITDB_DATABASE: yt
     volumes:
-      - ./src/init-db.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+      - ./src/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
       - mongo-volume:/data/db
     ports:
       - 27017:27017
